KAFKA-20431: Include partitions pending revocation in ConsumerGroupDescribe response
The ConsumerGroupDescribe API was not returning partitions being revoked
from a member. When a member was in the UNREVOKED_PARTITIONS state, the
Assignment field only included assignedPartitions, missing partitions in
partitionsPendingRevocation. This fix merges both into the Assignment
field since the member is still responsible for those partitions until
revocation completes.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>